# kana-edit

./: .gitignore  .travis.yml  LICENSE  Makefile  Makefile.in  README  README.md  appveyor.yml  autodefine.sh  autogen.sh  config.h.in  configure  configure.ac  old.Makefile
MSVC15/: Solution_kanaedit.sln  unzip_headers.bat
MSVC15/Project_kanaedit/: Project_kanaedit.filters  Project_kanaedit.vcxproj
include/: backspace.hpp  concatenate.hpp  defines.h  hiragana.hpp  icon.h  katakana.hpp  main.hpp  rendervars.h  savewindow.hpp  stringconvert.hpp  threadvars.h
src/: Makefile.am  Makefile.in  appendix  backspace.cpp  concatenate.cpp  hiragana.cpp  katakana.cpp  main.cpp  renderdraw.cpp  savewindow.cpp  stringconvert.cpp
